Complete Web Layout

--- a/index.html
+++ b/index.html
@@ -4,30 +4,35 @@
     </head>
 
     <body>
-        <table border="1" cellspacing="0" width="80%" align="center" valign="center">
-            <tr>
+        <table border="1" cellpadding="10px" cellspacing="0" width="80%" align="center" height="80%">
+            <tr bgcolor="grey">
                 <td colspan="2">
                     <h1>Ahmad Uppal</h1>
                 </td>
             </tr>
-            <tr>
+            <tr bgcolor="#eed0ca">
                 <td colspan="2">
                     <a href="">Home</a> | <a href="https://www.github.com/Ahmad-U19">About us</a> | <a href="https://www.google.com">Site us </a> | <a href="https://www.youtube.com/@duckybhai"> Subscribe us </a>
                 </td>
             </tr>
-            <tr>
-                <td>
+            <tr bgcolor="#4add65">
+                <td width="80%">
                     <h2>Frequently Asked Question</h2>
                     <p>Vivamus non consectetur felis, vel gravida nibh. Mauris eget nisl lorem. Quisque posuere ligula at metus pellentesque vehicula. Aenean viverra posuere risus, in ultricies lectus porta in. Aenean id scelerisque mi, ac efficitur turpis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Vestibulum tempus congue ligula quis tempor. Cras euismod eget tortor ut eleifend.</p>
                     <p>Sed quis augue rhoncus, commodo eros ac, tincidunt eros. Phasellus ultricies odio sodales mi euismod congue. Nullam ac viverra diam, at pretium risus. Suspendisse placerat id erat nec consectetur. In hac habitasse platea dictumst. Suspendisse purus leo, hendrerit luctus est nec, rutrum ultricies mauris. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Proin aliquet a lectus vestibulum suscipit. Quisque volutpat augue nec maximus suscipit. Pellentesque vulputate rhoncus semper. Cras eu leo placerat, sodales est sed, molestie libero. Duis tincidunt posuere diam, quis porta nisi efficitur id.</p>
                 </td>
                 
-                <td rowspan="2">
-                    Sidebar
+                <td valign="top" bgcolor="red">
+                    <h4>Social Media</h4>
+                    <ul>
+                        <li><a href="https://www.facebook.com/ibtasamul.hassaan">FaceBook</a></li>
+                        <li><a href="https://www.instagram.com/ch_ahmad_uppal">Instagram</a></li>
+                        <li><a href="https://www.linkedin.com/in/ahmed-oppal-84a82b29b/">Linkedin</a></li>
+                    </ul>
                 </td>
             </tr>
-            <tr>
-                <td>
+            <tr bgcolor="#b8adad ">
+                <td colspan="2">
                     Copyright: ahmedoppal2592@gmail.com
                 </td>
             </tr>
